# modifs-pdfs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
code/: modifs_pdfs.spec
code/src/main/icons/: generate_images.py
code/src/main/python/: main.py
code/src/main/python/package/: main_window.py
code/src/main/resources/base/: style.css
